--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "web/select2"]
 	path = web/select2
-	url = git@github.com:ivaynberg/select2.git
+	url = https://github.com/ivaynberg/select2.git
